feat: nuke max 3 times